Fix settings topbar visibility with CSS route state

--- a/assets/styles/layout/_topbar.scss
+++ b/assets/styles/layout/_topbar.scss
@@ -159,6 +159,12 @@ nav.topbar-nav {
     }
 }
 
+body.route-settings_index {
+    #navigation-settings {
+        display: none !important;
+    }
+}
+
 // -- set menu items visibility
 #navigation-library,
 #navigation-radio-new,
