--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -227,6 +227,10 @@ nav.topbar-nav .topbar-nav-label {
   padding-left: 10px;
 }
 
+body.route-settings_index #navigation-settings {
+  display: none !important;
+}
+
 #navigation-library,
 #navigation-radio-new,
 #navigation-back-to-radio-index {
@@ -461,13 +465,17 @@ thead {
 
 img.cover {
   position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  top: 3%;
+  left: 3%;
+  width: 90%;
+  height: 90%;
+  box-shadow: rgba(255, 255, 255, 0.4) 6px 6px 6px;
 }
 
 .album-infos {
   font-size: 0.8em;
+  margin-top: -10px;
+  margin-bottom: 20px;
 }
 .album-infos > div {
   text-align: center;
